# franka_il_ws_src

./: .gitignore  CHANGELOG.rst  Jenkinsfile  README.md  dependency.repos  franka.repos  franka_desktop_audit.sh  流程  流程1  流程（复件）
docs/: index.rst
franka_bringup/: package.xml
franka_bringup/config/: controllers.yaml  franka.config.yaml
franka_bringup/franka_bringup/: launch_utils.py
franka_bringup/launch/: example.launch.py  franka.launch.py  joint_impedance_with_ik_example_controller.launch.py
franka_description/: CHANGELOG.rst  package.xml
franka_description/.docker/: Dockerfile
franka_description/launch/: visualize_franka.launch.py  visualize_franka_duo.launch.py
franka_description/robots/common/: franka_arm.ros2_control.xacro  franka_arm.xacro  franka_robot.xacro
franka_description/robots/fer/: fer.srdf.xacro  fer.urdf.xacro
franka_description/robots/fp3/: fp3.urdf.xacro
franka_description/robots/fr3/: fr3.urdf.xacro
franka_description/robots/fr3_duo/: fr3_duo.urdf.xacro
franka_description/robots/fr3v2/: fr3v2.urdf.xacro
franka_description/robots/fr3v2_1/: fr3v2_1.urdf.xacro
franka_description/robots/mobile_fr3_duo_v0_2/: mobile_fr3_duo_v0_2.xacro
franka_description/robots/tmrv0_2/: argo_drive.xacro  caster_wheel.xacro  tmrv0_2.ros2_control.xacro  tmrv0_2.urdf.xacro  tmrv0_2.xacro
franka_description/scripts/: create_urdf.py
franka_description/test/: urdf_tests.py
franka_example_controllers/: CMakeLists.txt  franka_example_controllers.xml  package.xml
franka_example_controllers/doc/: index.rst
franka_example_controllers/src/async_motions/: ptp_motion_example_node.cpp
franka_example_controllers/src/fr3/: cartesian_elbow_example_controller.cpp  cartesian_orientation_example_controller.cpp  cartesian_pose_example_controller.cpp  cartesian_velocity_example_controller.cpp  elbow_example_controller.cpp  gravity_compensation_example_controller.cpp  joint_impedance_example_controller.cpp  joint_impedance_with_ik_example_controller.cpp  joint_position_example_controller.cpp  joint_velocity_example_controller.cpp  model_example_controller.cpp  (+1 more)
franka_example_controllers/test/: test_gravity_compensation_example.cpp
franka_fr3_moveit_config/: package.xml
franka_fr3_moveit_config/launch/: moveit.launch.py
franka_gazebo/: README.md
franka_gazebo/doc/: index.rst
franka_gazebo/franka_gazebo_bringup/: package.xml
franka_gazebo/franka_ign_ros2_control/: README.md  package.xml
franka_gazebo_bringup/: CMakeLists.txt  README.md  package.xml
franka_gazebo_bringup/config/: franka_gazebo_controllers.yaml  franka_gazebo_controllers.yaml.bak
franka_gazebo_bringup/doc/: index.rst
franka_gazebo_bringup/launch/: gazebo_franka_arm_example_controller.launch.py  gazebo_joint_impedance_controller_example.launch.py  gazebo_joint_position_controller_example.launch.py  gazebo_joint_velocity_controller_example.launch.py  gazebo_mobile_robot.launch.py  visualize_franka_robot.launch.py
franka_gazebo_bringup/test/: test_gazebo_franka_arm_example_controller.py
franka_gazebo_bringup/urdf/: franka_arm.gazebo.xacro  sensors.xacro  tmrv0_2_with_sensors.gazebo.urdf.xacro
franka_gazebo_bringup/worlds/: empty_no_gravity.sdf  mobile_fr3_duo_sensors.sdf  sensor_demo_world.sdf
franka_gripper/: package.xml
franka_hardware/: CMakeLists.txt  package.xml
franka_hardware/src/: franka_action_server.cpp
franka_hardware/test/: franka_action_server_test.cpp  ptp_motion_test.cpp
franka_mobile_sensors/: CMakeLists.txt  README.md  mobile_sensors.repos  package.xml
franka_mobile_sensors/config/: default_sensor_suite.yaml
franka_mobile_sensors/config/lidars/: sick_nanoscan2.yaml
franka_mobile_sensors/launch/: __init__.py  franka_mobile_sensors.launch.py
franka_mobile_sensors/launch/cameras/: camera_configs.py  realsense_cameras.launch.py
franka_mobile_sensors/launch/lidars/: lidar_configs.py  safety_scanners.launch.py
franka_mobile_sensors/launch/visualization/: rviz.launch.py
franka_mobile_sensors/robots/: tmrv0_2_with_sensors.urdf.xacro  tmrv0_2_with_sensors.xacro
franka_mobile_sensors/robots/nanoscan3/nanoscan3/: nanoscan3_macro.xacro
franka_msgs/: package.xml
franka_robot_state_broadcaster/: CMakeLists.txt  package.xml
franka_ros2/: package.xml
franka_ros2/doc/: index.rst
franka_semantic_components/: package.xml
franka_spacemouse/: .clang-format  .gitignore  CHANGELOG.rst  NOTICE  README.md  install_workspace_dependencies.bash  pyproject.toml  requirements.txt
franka_spacemouse/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
integration_launch_testing/: CMakeLists.txt  README.md  package.xml
integration_launch_testing/test/: controller_service_client.py  controller_test_utils.py  generic_controller_test.py  run_all_integration_tests.py  test_franka_gripper_position.py  test_output.py
(+58 files in other folders)
